# rust-stm32-multiapp-bootloader

./: Cargo.toml  README.md  UART_LOGGING.md
.cargo/: config.toml
app1/: Cargo.toml  memory.x
app1/src/: main.rs
app2/: Cargo.toml  memory.x
app2/.cargo/: config.toml
app2/src/: main.rs
bootloader/: Cargo.toml  build.rs  device.x  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
