[package]
name = "app1"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
panic-halt = "1.0.0"
embedded-hal = "1.0.0"
defmt = "1.0.1"
defmt-rtt = { version = "1.1.0" }
rtic-sync = "1.4.0"
fugit = "0.3.9"

[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = [
    "stm32f411",
    "rtic2",
] # replace the model of your microcontroller here

# this lets you use `cargo fix`!
[[bin]]
name = "app1"
test = false
bench = false
